--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-     "@aws-amplify/geo": "^3.0.70",
+    "@aws-amplify/geo": "^3.0.70",
     "@aws-amplify/ui-react": "^6.5.5",
     "@aws-amplify/ui-react-geo": "^2.2.1",
+    "@aws-amplify/ui-react-storage": "^3.7.2",
     "aws-amplify": "^6.6.6",
     "deck.gl": "8.8.20",
     "maplibre-gl": "^2.4.0",
